fix: background overlay not covering background Image on all screen sizes

--- a/src/components/AutoComplete/AutoComplete.module.scss
+++ b/src/components/AutoComplete/AutoComplete.module.scss
@@ -43,7 +43,9 @@
 
 .selected {
   background: linear-gradient(90deg, var(--quaternary-gradient));
-  &:hover {
+  &:hover,
+  &:focus,
+  &:active {
     background: rgba($color: #000000, $alpha: 0.4);
   }
 }
