--- a/src/components/BackgroundImage/BackgroundImage.module.scss
+++ b/src/components/BackgroundImage/BackgroundImage.module.scss
@@ -21,7 +21,7 @@
     height: 75%;
   }
   @include mixins.desktop() {
-    height: unset;
+    height: 100%;
   }
 }
 
